deployment/components/istio/authz/authz-vdb.yaml
# Copyright (C) 2024-2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

---

apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: mssql
  namespace: vdb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mssql
  action: DENY
  rules:
  - from:
    - source:
        notPrincipals:
        - cluster.local/ns/vdb/sa/default
        - cluster.local/ns/edp/sa/edp-chart
        - cluster.local/ns/monitoring/sa/telemetry-kube-prometheus-prometheus
        - cluster.local/ns/monitoring/sa/telemetry-prometheus-redis-exporter
        - cluster.local/ns/chatqa/sa/retriever-usvc

---

apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: pgvector
  namespace: vdb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pgvector
  action: DENY
  rules:
  - from:
    - source:
        notPrincipals:
        - cluster.local/ns/vdb/sa/default
        - cluster.local/ns/edp/sa/edp-chart
        - cluster.local/ns/monitoring/sa/telemetry-kube-prometheus-prometheus
        - cluster.local/ns/monitoring/sa/telemetry-prometheus-redis-exporter
        - cluster.local/ns/chatqa/sa/retriever-usvc

---

apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: redis-cluster
  namespace: vdb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redis-cluster
  action: DENY
  rules:
  - from:
    - source:
        notPrincipals:
        - cluster.local/ns/vdb/sa/vdb-redis-cluster
        - cluster.local/ns/edp/sa/edp-chart
        - cluster.local/ns/monitoring/sa/telemetry-kube-prometheus-prometheus
        - cluster.local/ns/monitoring/sa/telemetry-prometheus-redis-exporter
        - cluster.local/ns/chatqa/sa/retriever-usvc

---

apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: redis
  namespace: vdb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  action: DENY
  rules:
  - from:
    - source:
        notPrincipals:
        - cluster.local/ns/vdb/sa/vdb-redis
        - cluster.local/ns/edp/sa/edp-chart
        - cluster.local/ns/monitoring/sa/telemetry-kube-prometheus-prometheus
        - cluster.local/ns/monitoring/sa/telemetry-prometheus-redis-exporter
        - cluster.local/ns/chatqa/sa/retriever-usvc
